[gd_scene load_steps=4 format=3 uid="uid://cfh51kiodwg2w"]

[ext_resource type="PackedScene" uid="uid://2q1fn1j0qqqv" path="res://scenes/menu_background.tscn" id="1_05p07"]
[ext_resource type="Script" uid="uid://cd52bsfpk2xnq" path="res://src/settings_menu.gd" id="1_wswnh"]
[ext_resource type="Theme" uid="uid://kv5hrut8ubdx" path="res://vfx/dog_theme.tres" id="2_cr101"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wswnh")

[node name="MenuBackground" parent="." instance=ExtResource("1_05p07")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -162.0
offset_right = 131.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cr101")
theme_override_font_sizes/font_size = 54
text = "Settings"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MasterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer/MasterContainer"]
layout_mode = 2
theme = ExtResource("2_cr101")
text = "Master"

[node name="Control" type="Control" parent="VBoxContainer/MasterContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/MasterContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme = ExtResource("2_cr101")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Control4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
theme = ExtResource("2_cr101")
text = "Music"

[node name="Control" type="Control" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme = ExtResource("2_cr101")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Control3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="SoundEffectsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="VBoxContainer/SoundEffectsContainer"]
layout_mode = 2
theme = ExtResource("2_cr101")
text = "Sound Effects"

[node name="Control" type="Control" parent="VBoxContainer/SoundEffectsContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="SoundEffectsSlider" type="HSlider" parent="VBoxContainer/SoundEffectsContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme = ExtResource("2_cr101")
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="value_changed" from="VBoxContainer/MasterContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundEffectsContainer/SoundEffectsSlider" to="." method="_on_sound_effects_slider_value_changed"]
